Compact mode: fix alignment of textual events

--- a/res/css/views/rooms/_EventTile.scss
+++ b/res/css/views/rooms/_EventTile.scss
@@ -629,6 +629,7 @@ div.mx_EventTile_notSent.mx_EventTile_redacted .mx_UnknownBody {
     .mx_EventTile_line, .mx_EventTile_reply {
         padding-top: 0px;
         padding-bottom: 0px;
+        padding-left: 45px;
     }
 
     .mx_EventTile_avatar {
@@ -656,12 +657,13 @@ div.mx_EventTile_notSent.mx_EventTile_redacted .mx_UnknownBody {
         margin-top: 6px;
     }
 
-    .mx_EventTile_content, .mx_ReplyThread, .mx_TextualEvent {
-        margin-left: -20px;
-    }
-
     .mx_ReplyThread {
         margin-bottom: 5px;
+        padding-left: 0;
+    }
+
+    .mx_ReplyThread_show {
+        padding-left: 10px;
     }
 
     .mx_EventTile_content .markdown-body {
